# myada

./: .envrc  .gitignore  .pdm-python  ada.py  ada_research.ipynb  agent_conversation.py  app.py  converse.py  default.nix  devenv.nix  env.sample  environment.yml  flake.nix  pyproject.toml  requirements.txt  runtime_time_table.jsonl  tts.py
ada/: __init__.py  main.py
ada/modules/: ada.py  ada_ollama copy.py  ada_ollama.py  ada_openai.py  ada_openai_multiagent.py  ada_openai_realtimeapi.py  asr.py  async_microphone.py  audio.py  config.py  dependencies.py  hf_utils.py  logging.py  model_manager.py  models.py  realtime_api.py  stt.py  text_utils.py  tools.py  tts.py
research/: ada_research.ipynb  agentic-trading-system-local.ipynb  agentic-trading-system.ipynb  bark.ipynb  credentials.json  google_tools.ipynb  headshot.ipynb  langchain_basic_setup.ipynb  langchain_lcel_example.ipynb  langchain_rag_search.ipynb  openai_agent.ipynb  openbb.ipynb  rag_local_ollama_langchain.ipynb  research_assistant.ipynb  research_assistant_google.ipynb  sounddevice_reference.py  test_openai_realtime_sync.ipynb  token.json  torch_test.ipynb
