[project]
name = "ada"
version = "0.1.0"
description = "Another Digital Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests"
    , "rich"
    , "websockets>=13.1"
    , "pyaudio"
    , "python-dotenv"
    , "ipykernel"
    , "ipywidgets"
    , "openai>=1.51.0"
    , "openbb"
    , "python-dotenv"

    # General Notebook Deps
    , "ipykernel"
    , "ipywidgets"
    , "notebook"

    # For the research notebooks
    , "huggingface_hub"
    , "langchain-anthropic"
    , "langchain-core"
    , "langchain-community"
    , "langchain-openai"
    , "langchain-ollama"
    , "langgraph"
    , "langgraph-sdk"
    , "matplotlib"
    , "torch"
    , "torchvision"
    , "transformers"
    , "datasets"
    , "nltk"
    # , "openai-whisper"
    , "faster-whisper"
    , "sounddevice"
    , "duckduckgo_search"
    , "google-genai"
    , "google-generativeai"
    , "loguru"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ada = "ada.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
